# dataOfGADT

./: README.md  dataOfGADT.cabal  stack.yaml
Data/Data/: TH.hs
src/Data/Data/: TH.hs
test/: A.hs
