name:                dataOfGADT
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      .
  exposed-modules:     Data.Data.TH
  build-depends:       base >= 4.7 && < 5, syb, containers, template-haskell, mtl
  default-language:    Haskell2010